<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/behavior_sv"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.sneha.medireq.PastConditionsActivity"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Behavior"
            android:textSize="26sp"
            android:textColor="@color/darkred"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Doyou"
            android:textColor="@color/mediumred"
            android:textStyle="bold"
            android:textSize="22sp"/>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:id = "@+id/tobacco"
            android:onClick="setChecked">

            <CheckBox
                android:id = "@+id/checkbox_tobacco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mediumpink"
                />

            <TextView android:text="@string/tobacco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:id = "@+id/alcohol"
            android:onClick="setChecked">

            <CheckBox
                android:id = "@+id/checkbox_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mediumpink"
                />

            <TextView android:text="@string/alcohol"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:id = "@+id/coffee"
            android:onClick="setChecked">

            <CheckBox
                android:id = "@+id/checkbox_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mediumpink"
                />

            <TextView android:text="@string/coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:id = "@+id/exercise"
            android:onClick="setChecked">

            <CheckBox
            android:id = "@+id/checkbox_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/mediumpink"/>

            <TextView android:text="@string/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor = "@color/black"
                android:textSize="20sp"/>



        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bttn_save_behavior"
            android:text="@string/SaveChanges"
            android:background="@drawable/pink_button"
            android:textColor="@color/darkred"
            android:layout_marginTop="15dp"/>

    </LinearLayout>






</ScrollView>
